<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.diet.DietActivity2"
    android:background="@color/white">

    <Button
        android:id="@+id/btnRingan"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/ringan"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnSedang"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/sedang"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnAktif"
        android:layout_width="366dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/aktif"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnBerat"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/berat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/body_type"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnMeso"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="308dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/meso"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnEcto"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="276dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/ecto"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnEndo"
        android:layout_width="366dp"
        android:layout_height="22dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="344dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/endo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/diet_assist"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/numberss"
        android:textColor="@color/venice_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <TextView
        android:id="@+id/tvPola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/eat_habits"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />


    <TextView
        android:id="@+id/tvIsi"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/selects"
        android:textColor="@color/smokey_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <CheckBox
        android:id="@+id/cbQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="564dp"
        android:text="@string/tiga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <CheckBox
        android:id="@+id/cbQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="604dp"
        android:text="@string/empat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <CheckBox
        android:id="@+id/cbQuestion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="648dp"
        android:text="@string/lima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/venice_blue"
        android:fontFamily="@font/inter_bold"
        android:text="@string/next"
        android:textColor="@color/seashell"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbQuestion3" />

    <Button
        android:id="@+id/btnUlang"
        style="@style/Margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/previous"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/venice_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <TextView
        android:id="@+id/tvAktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Aktivitas"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnSedikit"
        android:layout_width="366dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/sedikit"
        android:textAllCaps="false"
        android:gravity="start"
        android:background="@color/seashell"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAktivitas" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/jumlah"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBerat" />

</androidx.constraintlayout.widget.ConstraintLayout>