<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.diet.DietActivity3"
    android:background="@color/white">

    <Button
        android:id="@+id/btnRingan"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:text="@string/moderat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnSedang"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="164dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:text="@string/moderats"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnEsktrem"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="224dp"
        android:background="@color/seashell"
        android:fontFamily="@font/inter_medium"
        android:text="@string/berats"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/diet_assist"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:textSize="14sp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/numbers"
        android:textColor="@color/venice_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <TextView
        android:id="@+id/tvPola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tujuan"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <TextView
        android:id="@+id/tvIsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/selectss"
        android:textColor="@color/smokey_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />


    <Button
        android:id="@+id/btnNext"
        style="@style/Margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/venice_blue"
        android:fontFamily="@font/inter_bold"
        android:text="@string/next"
        android:textColor="@color/seashell"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEsktrem" />

    <Button
        android:id="@+id/btnUlang"
        style="@style/Margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/previous"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/venice_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <TextView
        android:id="@+id/tvAktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        android:text="@string/rencana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsi" />

    <Button
        android:id="@+id/btnPertahankan"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/ringa"
        android:textAllCaps="false"
        android:background="@color/seashell"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAktivitas" />

</androidx.constraintlayout.widget.ConstraintLayout>